fixed bugs and change back-end files